--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -28,9 +28,12 @@
 .high {
   color: green;
 }
+.logDetail span {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 .logDetail {
-  background-color: bisque;
-  border: solid;
+  background-color: #8da5cb;
+  border: none;
   border-radius: 10px;
   margin-top: 1em;
   width: 450px;
@@ -40,7 +43,13 @@
 }
 .logDetail button {
   margin-left: 13em;
-  height: 25px;
-  width: 50px;
+  height: 35px;
+  width: 60px;
   border-radius: 10px;
+  margin-top: 10px;
+  background-color: rgb(243, 171, 248);
+}
+.logDetail h2 {
+  text-decoration: underline;
+  border: 1px;
 }
