--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -31,17 +31,28 @@
 .logDetail span {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+.details {
+  display: flex;
+  justify-content: space-around;
+  margin: 1em;
+}
 .logDetail {
   background-color: #8da5cb;
   border: none;
   border-radius: 10px;
-  margin-top: 1em;
+  /* margin-top: 1em; */
   width: 450px;
-  justify-self: center;
+  /* height: 500px; */
+  /* justify-self: center; */
   padding: 10px;
-  justify-content: space-between;
+  /* overflow-x: auto; */
+  /* justify-content: space-between; */
 }
-.logDetail button {
+.logDetail h1 {
+  text-align: center;
+  text-decoration: underline overline;
+}
+.dbtn {
   margin-left: 13em;
   height: 35px;
   width: 60px;
@@ -53,7 +64,24 @@
   text-decoration: underline;
   border: 1px;
 }
-
+.additionalDetails {
+  width: 450px;
+  border-radius: 8px;
+  background-color: lightcoral;
+}
+.additionalDetails h1 {
+  text-align: center;
+  text-decoration: underline overline;
+}
+.additionalDetails h2 {
+  text-decoration: underline;
+  border: 1px;
+}
+.flag {
+  width: 150px;
+  height: 100px;
+  margin-left: 7em;
+}
 .favorites {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
